Bug fixes sass folders and main.scss. Header & Game info done.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <title>Whack a Mole</title>
 </head>
   <body>
-    <div class="wrapper">
-
+    <header>
+      <h1 class="header__title">Whack a Mole</h1>
+      <a class="header__github" href="https://github.com/ttimoww/whack-a-mole"><i class="fab fa-github"></i></a>
+    </header>
+    <section class="game-info">
+      <div class="game-info__info-block">
+        <p>highscore</p>
+        <p>25</p>
+      </div>
+      <div class="game-info__info-block">
+        <p>current score</p>
+        <p>19</p>
+      </div>
+      <div class="game-info__start-game">
+        <button type="button">start game</button>
+      </div>
+    </section>
   </body>
 </html>
