Game grid including holes & moles.

--- a/index.html
+++ b/index.html
@@ -25,5 +25,31 @@
         <button type="button">start game</button>
       </div>
     </section>
+    <section class="game">
+      <div class="game__container">
+        <div class="hole" id="hole1">
+          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole hidden">
+        </div>
+        <div class="hole" id="hole2">
+          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole hidden">
+        </div>
+        <div class="hole" id="hole3">
+          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole hidden">
+        </div>
+        <div class="hole" id="hole4">
+          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole hidden">
+        </div>
+        <div class="hole" id="hole5">
+          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole hidden">
+        </div>
+      </div>
+    </section>
   </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+  <script src="./assets/js/gameStyles.js" charset="utf-8"></script>
 </html>
