--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="game-info__info-block">
         <p>current score</p>
-        <p>0</p>
+        <p id="current-score">0</p>
       </div>
       <div class="game-info__start-game">
         <button type="button" id="start-game">start game</button>
@@ -28,24 +28,24 @@
     <section class="game">
       <div class="game__container">
         <div class="hole" id="hole1">
-          <img src="./images/hole-grass.png" class="hole__hole">
           <img src="./images/mole.png" class="hole__mole">
+          <img src="./images/hole-grass.png" class="hole__hole">
         </div>
         <div class="hole" id="hole2">
-          <img src="./images/hole-grass.png" class="hole__hole">
           <img src="./images/mole.png" class="hole__mole">
+          <img src="./images/hole-grass.png" class="hole__hole">
         </div>
         <div class="hole" id="hole3">
-          <img src="./images/hole-grass.png" class="hole__hole">
           <img src="./images/mole.png" class="hole__mole">
+          <img src="./images/hole-grass.png" class="hole__hole">
         </div>
         <div class="hole" id="hole4">
-          <img src="./images/hole-grass.png" class="hole__hole">
           <img src="./images/mole.png" class="hole__mole">
+          <img src="./images/hole-grass.png" class="hole__hole">
         </div>
         <div class="hole" id="hole5">
-          <img src="./images/hole-grass.png" class="hole__hole">
           <img src="./images/mole.png" class="hole__mole">
+          <img src="./images/hole-grass.png" class="hole__hole">
         </div>
       </div>
     </section>
