Main game loop done

--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
         <p id="current-score">0</p>
       </div>
       <div class="game-info__start-game">
-        <button type="button" id="start-game">start game</button>
+        <button type="button" id="start-game" >start game</button>
       </div>
     </section>
     <section class="game">
       <div class="game__container">
         <div class="hole" id="hole1">
-          <img src="./images/mole.png" class="hole__mole">
-          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole" draggable="false">
+          <img src="./images/hole-grass.png" class="hole__hole" draggable="false">
         </div>
         <div class="hole" id="hole2">
-          <img src="./images/mole.png" class="hole__mole">
-          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole" draggable="false">
+          <img src="./images/hole-grass.png" class="hole__hole" draggable="false">
         </div>
         <div class="hole" id="hole3">
-          <img src="./images/mole.png" class="hole__mole">
-          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole" draggable="false">
+          <img src="./images/hole-grass.png" class="hole__hole" draggable="false">
         </div>
         <div class="hole" id="hole4">
-          <img src="./images/mole.png" class="hole__mole">
-          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole" draggable="false">
+          <img src="./images/hole-grass.png" class="hole__hole" draggable="false">
         </div>
         <div class="hole" id="hole5">
-          <img src="./images/mole.png" class="hole__mole">
-          <img src="./images/hole-grass.png" class="hole__hole">
+          <img src="./images/mole.png" class="hole__mole" draggable="false">
+          <img src="./images/hole-grass.png" class="hole__hole" draggable="false">
         </div>
       </div>
     </section>
