README.md. Small changes to js and sass.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="icon" href="icon.png">
   <title>Whack a Mole</title>
 </head>
   <body>
@@ -22,7 +23,7 @@
         <p id="current-score">0</p>
       </div>
       <div class="game-info__start-game">
-        <button type="button" id="start-game">start game</button>
+        <button type="button" id="start-game">start</button>
         <p id="game-timer">0</p>
       </div>
     </section>
